# TinyVBD

./: CMakeLists.txt  Strand.h  Types.h  main.cpp
output/Test4_20Verts_30degree_withSkip_stiffness1e8/: A00000000.json  A00000001.json  A00000002.json  A00000003.json  A00000004.json  A00000005.json  A00000006.json  A00000007.json  A00000008.json  A00000009.json  A00000010.json  A00000011.json  A00000012.json  A00000013.json  A00000014.json  A00000015.json  A00000016.json  A00000017.json  A00000018.json  A00000019.json  A00000020.json  A00000021.json  A00000022.json  A00000023.json  A00000024.json  A00000025.json  A00000026.json  A00000027.json  A00000028.json  A00000029.json  A00000030.json  A00000031.json  A00000032.json  A00000033.json  A00000034.json  A00000035.json  A00000036.json  A00000037.json  A00000038.json  A00000039.json  (+243 more)
output/Test8_5Verts_stiffnessRatio48_accelerated/: A00000000.json  A00000001.json  A00000002.json  A00000003.json  A00000004.json  A00000005.json  A00000006.json  A00000007.json  A00000008.json  A00000009.json  A00000010.json  A00000011.json  A00000012.json  A00000013.json  A00000014.json  A00000015.json  A00000016.json  A00000017.json  A00000018.json  A00000019.json  A00000020.json  A00000021.json  A00000022.json  A00000023.json  A00000024.json  A00000025.json  A00000026.json  A00000027.json  A00000028.json  A00000029.json  A00000030.json  A00000031.json  A00000032.json  A00000033.json  A00000034.json  A00000035.json  A00000036.json  A00000037.json  A00000038.json  A00000039.json  (+261 more)
